--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "masters-2024",
   "version": "1.0.0",
   "dependencies": {
+    "fuse.js": "7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
